--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <header>
+            <h1>Library</h1>
+        </header>
+        <main>
+        </main>
+    </div>
     <script src="app.js"></script>
 </body>
 
