show each book as a card in gallery

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div class="wrapper">
         <header>
             <h1>Library</h1>
+            <button class="add-card-button">add</button>
         </header>
-        <main>
+        <main class="gallery">
+
         </main>
     </div>
     <script src="app.js"></script>
