--- a/index.html
+++ b/index.html
@@ -16,8 +16,32 @@
             <button class="add-card-button">add</button>
         </header>
         <main class="gallery">
-
         </main>
+        <form class="add-book-form">
+            <h2>Add new book</h2>
+            <div class="inputs-wrapper">
+                <label>
+                    Title:
+                    <input type="text" name="title" id="title">
+                </label>
+                <label>
+                    Author:
+                    <input type="text" name="author" id="author">
+                </label>
+                <label>
+                    Number of pages:
+                    <input type="number" name="pages" id="pages">
+                </label>
+                <div class="checkbox">
+                    <span>Have you read it already?</span>
+                    <label class="switch">
+                        <input type="checkbox" name="is-read" id="is-read">
+                        <span class="slider"></span>
+                    </label>
+                </div>
+            </div>
+            <button class="add-book">Add</button>
+        </form>
     </div>
     <script src="app.js"></script>
 </body>
