--- a/index.html
+++ b/index.html
@@ -13,35 +13,38 @@
     <div class="wrapper">
         <header>
             <h1>Library</h1>
-            <button class="add-card-button">add</button>
+            <button class="open-form">+</button>
         </header>
         <main class="gallery">
         </main>
-        <form class="add-book-form">
-            <h2>Add new book</h2>
-            <div class="inputs-wrapper">
-                <label>
-                    Title:
-                    <input type="text" name="title" id="title">
-                </label>
-                <label>
-                    Author:
-                    <input type="text" name="author" id="author">
-                </label>
-                <label>
-                    Number of pages:
-                    <input type="number" name="pages" id="pages">
-                </label>
-                <div class="checkbox">
-                    <span>Have you read it already?</span>
-                    <label class="switch">
-                        <input type="checkbox" name="is-read" id="is-read">
-                        <span class="slider"></span>
+        <div class="cover">
+            <form class="add-book-form">
+                <button type="button" class="close-cover">X</button>
+                <h2>Add new book</h2>
+                <div class="inputs-wrapper">
+                    <label>
+                        Title:
+                        <input type="text" name="title" id="title">
                     </label>
+                    <label>
+                        Author:
+                        <input type="text" name="author" id="author">
+                    </label>
+                    <label>
+                        Number of pages:
+                        <input type="number" name="pages" id="pages">
+                    </label>
+                    <div class="checkbox">
+                        <span>Have you read it already?</span>
+                        <label class="switch">
+                            <input type="checkbox" name="is-read" id="is-read">
+                            <span class="slider"></span>
+                        </label>
+                    </div>
                 </div>
-            </div>
-            <button class="add-book">Add</button>
-        </form>
+                <button class="add-book">Add</button>
+            </form>
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
